Version 1.9.2i (February 10, 2010)
----------------------------------
* Don't autodetect interface addresses etc. in the main script, instead do it during install
! sysctl() always applied the -w argument which it shouldn't
! DNS failed during startup
* We shouldn't just default (too much) to ANYHOST and/or ANYPORT, if not specified. This is too user error-sensitive (including myself)
! Can't have defaults for protocols
* Misc. tweaks & cosmetics

Version 1.9.2h (January 5, 2010)
--------------------------------
! %0d in the date format is not supported by busybox so replace it with %d (thanks Lonnie)
! Init script for newer Debian/Ubuntu version. Start on system startup,
  only stop on system shutdown. Moreover, do not wait for syslog, but start
  whenever there is network (thanks downstream/Michael Hanke)
* Cleaned up/tweaked sysctl & modprobe functions
* Consistently use 'ip' instead of 'ifconfig' to obtain interface attributes.
+ Add iptables_batch() function to greatly decrease the time to add the "Blocked Host" rules.
  iptables_batch() uses iptables-save and iptables-restore to add rules in batch rather than one-by-one.
  This feature may be disabled by setting DISABLE_IPTABLES_BATCH=1
! Fixed typo in module_probe deprecation warning
+ Autodetect netmask & broadcast addresses for INT_IF & EXT_IF
+ Add a default DROP to the HOST_BLOCK_SRC and HOST_BLOCK_DST chains while they are being built,
  this is most important when using the 'force-reload' verb.  During the time the Blocked Hosts are
  being applied, no new traffic will be allowed in any direction.
+ Add a check for the '-' character in the ip_range() function for improved execution speed.
* The "Blocked Host" feature now also matches the destination address for outbound traffic in addition to the
  previous matching of the source address for inbound traffic.
* The "Blocked Host" logging is now implemented as one rule rather than a rule for each blocked host.