@@ -110,10 +110,8 @@ sanity_check()
   #############################
   IFS=' ,'
   for interface in $EXT_IF; do
-    if ! echo $interface |grep -q '\+'; then
-      if ! check_interface $interface; then
-        printf "\033[40m\033[1;31mNOTE: External interface $interface does NOT exist (yet?)\033[0m\n"
-      fi
+    if ! check_interface $interface; then
+      printf "\033[40m\033[1;31mNOTE: External interface $interface does NOT exist (yet?)\033[0m\n" >&2
     fi
   done
 
@@ -121,10 +119,8 @@ sanity_check()
   ###############################
   IFS=' ,'
   for interface in $INT_IF; do
-    if ! echo $interface |grep -q '\+'; then
-      if ! check_interface $interface; then
-        printf "\033[40m\033[1;31mNOTE: Internal interface $interface does NOT exist (yet?)\033[0m\n"
-      fi
+    if ! check_interface $interface; then
+      printf "\033[40m\033[1;31mNOTE: Internal interface $interface does NOT exist (yet?)\033[0m\n" >&2
     fi
   done
 
@@ -132,10 +128,8 @@ sanity_check()
   ###############################
   IFS=' ,'
   for interface in $DMZ_IF; do
-    if ! echo $interface |grep -q '\+'; then
-      if ! check_interface $interface; then
-        printf "\033[40m\033[1;31mNOTE: DMZ interface $interface does NOT exist (yet?)\033[0m\n"
-      fi
+    if ! check_interface $interface; then
+      printf "\033[40m\033[1;31mNOTE: DMZ interface $interface does NOT exist (yet?)\033[0m\n" >&2
     fi
   done
 
@@ -143,10 +137,8 @@ sanity_check()
   ###################################
   IFS=' ,'
   for interface in $TRUSTED_IF; do
-    if ! echo $interface |grep -q '\+'; then
-      if ! check_interface $interface; then
-        printf "\033[40m\033[1;31mNOTE: Trusted interface $interface does NOT exist (yet?)\033[0m\n"
-      fi
+    if ! check_interface $interface; then
+      printf "\033[40m\033[1;31mNOTE: Trusted interface $interface does NOT exist (yet?)\033[0m\n" >&2
     fi
   done
 
