@@ -850,8 +850,22 @@ progress_bar()
 # Check existance of an interface
 check_interface()
 {
-  ip link show $1 >/dev/null 2>&1
-  return $?
+  # Wildcard interface?
+  if echo "$1" |grep -q '\+$'; then
+    local interface="$(echo "$1" |sed 's/\+$//')"
+    if ip link show |grep -q ": $interface[0-9]*:"; then
+      # Interface found
+      return 0
+    fi
+  else
+    if ip link show |grep -q ": $1:"; then
+      # Interface found
+      return 0
+    fi
+  fi
+  
+  # Interface not found
+  return 1
 }
 
 # Get IP address/mask of specified network interface
